--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,19 @@
 buildscript {
     repositories {
         jcenter()
+        google() //Required for Android Gradle plugins after 2.5
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.2.0+'
+    }
+}
+
+//Required for Android Gradle Plugin 3.2.0
+allprojects {
+    repositories{
+        jcenter()
+        google()
     }
 }
 
@@ -13,7 +22,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 16
@@ -31,6 +39,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    api 'com.facebook.react:react-native:+'
+    implementation files('libs/libmuse_android.jar')
 }
   
