--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "^0.41.2"
   },
   "dependencies": {
+    "flow-singleton": "git+file:/home/elmines/git/flow-singleton",
     "react-native-bci": "git+file:/home/elmines/git/react-native-bci#local",
     "rxjs": "^6.3.3"
   },
